<resources>
    <string name="app_name">QR Scanner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan">Scan</string>
    <string name="result">Result</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="text">Text</string>
    <string name="call">Call</string>
    <string name="email">Email</string>
    <string name="message">Message</string>
    <string name="web_url">Web URL</string>
    <string name="contact">Contact</string>
    <string name="wifi">Wifi</string>
    <string name="address">Address</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="vibration">Vibration</string>
    <string name="privecy_policy">Privecy Policy</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="version_1_0">Version : v1.0.1</string>
</resources>